# treco

./: .gitignore  README.md  core.py  debug_tools.py  extras.py  forecasts.py  indicators.py  markets.py  pyproject.toml  readme.md  tests_scraping_template.py
doc_generation/treco/: mkdocs.yml
doc_generation/treco/docs/: index.md
doc_generation/treco/docs/modules/: core.md  forecasts.md
doc_generation/treco/site/: 404.html  index.html  search.html  sitemap.xml
doc_generation/treco/site/api_reference/: index.html
doc_generation/treco/site/modules/core/: index.html
doc_generation/treco/site/modules/extras/: index.html
doc_generation/treco/site/modules/forecasts/: index.html
doc_generation/treco/site/modules/indicators/: index.html
doc_generation/treco/site/modules/markets/: index.html
doc_generation/treco/site/search/: search_index.json
doc_generation/treco/site/user_guide/: index.html
docs/: about.html  genindex.html  index.html  mkdocs.yml  objects.inv  usage.html
docs/_sources/: index.rst.txt
docs/modules/: extras.rst  indicators.rst  markets.rst
docs/source/: conf.py  index.rst  modules.rst
treco/: __init__.py  core.py  extras.py  forecasts.py  indicators.py  markets.py  requirements.txt  utils.py
